1. Reads the scanMode from the control file that's written out by the other app, phonegap-fieldays-innovation-controller, and does a qrScan or arScan based on that. 2. Dr Bainbridge fixed the behaviour of the crossfade leading to the audio, which used to play even if the back button was clicked on the startPage and the user had gone back to the homePage from there.

--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -123,9 +123,9 @@ body {
     
     background-color: #CC0000;
     font-family: helvetica, sans-serif;
-    font-size: 4rem; /* font shorthand doesn't work with rem in IE10 */
+    font-size: 3rem; /* font shorthand doesn't work with rem in IE10 */
     color: white;
-    padding: 1rem;
+    padding: 1.5rem;
  
     text-shadow: 0.2rem 0.2rem 0.8rem rgba(0,0,0, .4);   
     
@@ -205,7 +205,7 @@ body {
 
 .info-page {
     width: 600px; 
-    height: 500px;
+    height: 450px; /*500px*/
     
     display: -webkit-box; display: -moz-box;
     display: -ms-flexbox;
